@@ -1,3 +1,8 @@
+2008-11-16  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/38119
+	* gfortran.dg/array_temporaries_3.f90: New test.
+
 2008-11-15  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libfortran/37294
