@@ -1,5 +1,12 @@
 2008-11-16  Paul Thomas  <pault@gcc.gnu.org>
 
+	PR fortran/38119
+	* trans-array.c (gfc_trans_create_temp_array): Set the
+	loop->from to zero and the renormalisation of loop->to for all
+	dimensions.
+
+2008-11-16  Paul Thomas  <pault@gcc.gnu.org>
+
 	PR fortran/37926
 	* trans-expr.c (gfc_free_interface_mapping): Null sym->formal
 	(gfc_add_interface_mapping): Copy the pointer to the formal
